--- a/index.html
+++ b/index.html
@@ -15,21 +15,12 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=latin,greek' rel='stylesheet' type='text/css'>
         <link href="css/style.css" rel="stylesheet">
 
-        For Facebook
+        <!-- For Social Media -->
         <meta property="og:title" content="Nikolaos Kalampalikis" />
         <meta property="og:url" content="https://nkalampalikis.com" />
         <meta property="og:image" content="https://nkalampalikis.com/img/Profile_Picture.jpg" />
         <meta property="og:description" content="Personal website for Nikolaos Kalampalikis" />
 
-        <!-- Google Analytics -->
-         <!-- <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-196053569-1', 'auto');
-            ga('send', 'pageview');
-        </script> -->
     </head>
 
     <body id="page-top">
