--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=latin,greek' rel='stylesheet' type='text/css'>
         <link href="css/style.css" rel="stylesheet">
 
-        <!-- For Social Media -->
+        <!-- Open Graph protocol -->
         <meta property="og:title" content="Nikolaos Kalampalikis" />
-        <meta property="og:url" content="https://nkalampalikis.com" />
+        <meta property="og:url" content="https://www.nkalampalikis.com" />
         <meta property="og:image" content="https://nkalampalikis.com/img/Profile_Picture.jpg" />
-        <meta property="og:description" content="Personal website for Nikolaos Kalampalikis" />
+        <meta property="og:type" content="Personal website" />
 
         <!-- Google Analytics -->
         <script>
